--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,11 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
