--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "autoprefixer": "^10.4.20",
     "downshift": "^9.0.8",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
