--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.4",
     "downshift": "^9.0.8",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "leaflet": "^1.9.4",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
