--- a/backendNode/package.json
+++ b/backendNode/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
@@ -20,6 +21,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.7",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   },
